@@ -1,3 +1,9 @@
+2004-05-08  Glynn Foster  <glynn.foster@sun.com>
+
+	* logview.c: Patch from Samuel Stringham to parse
+	/etc/syslog.conf on first start up to see if it
+	can find some logs to open. Fixes #80865.
+
 2004-04-20  Glynn Foster  <glynn.foster@sun.com>
 
 	* Makefile.am: Fix distcheck.
